09_arcvive/TimeSCRPATemplet/GpMessages/3976313491100
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Tuesday, May 13, 2025 7:32:08 PM</msg><msg code="-2147467259" type="100">﻿  File "C:\Users\carucci_r\OneDrive - City of Hackensack\_Hackensack_Data_Repository\GIS_Tools\Scripts\ScriptsTimeSCRPATemplet\Updated Weekly Crime Report.py", line 1
    ""import sys
      ^^^^^^
﻿SyntaxError: invalid syntax
</msg><msg code="0" type="0">Failed script Updated Weekly Crime Report...</msg><msg code="-2147467259" type="100">Failed to execute (WeeklyCrimeExport).</msg><msg code="0" type="3">Failed at Tuesday, May 13, 2025 7:32:09 PM (Elapsed Time: 0.70 seconds)</msg></messages>